# tap

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  ROADMAP.md
src/: cli.rs  commands.rs  db.rs  main.rs  utils.rs
src/commands/: add.rs  delete.rs  export.rs  help.rs  here.rs  import.rs  init.rs  parent_entity.rs  show.rs  tui.rs  update.rs  upsert.rs  version.rs
src/commands/init/: shell_completions.rs  utils.rs  zsh.rs
src/shell_completions/: _tap
src/utils/: cli_usage_table.rs  command.rs  os_implementations.rs  tap_data_store.rs
